fix: fail closed on malformed OKX order books